# GASTON

./: .gitignore  .readthedocs.yaml  LICENSE  OLD_segmented_binning_plotting.py  README.md  README.rst  SpatialNN.py  binning_and_plotting.py  cluster_plotting.py  dp_related.py  environment.yml  example_outputs.ipynb  plot_cell_types.py  pyproject.toml  segmented_fit.py  setup.py  spatial_gene_classification.py  streamlines.py
.ipynb_checkpoints/: OLD_segmented_binning_plotting-checkpoint.py  README-checkpoint.md  SpatialNN-checkpoint.py  binning_and_plotting-checkpoint.py  cluster_plotting-checkpoint.py  dp_related-checkpoint.py  plot_cell_types-checkpoint.py  pyproject-checkpoint.toml  segmented_fit-checkpoint.py  setup-checkpoint.py  spatial_gene_classification-checkpoint.py
data/cerebellum/: F_glmpca_penalty_10_rep1.npy  cerebellum_gene_labels.npy  coords.txt  glmpca.txt
docs/: conf.py  index.rst  installation.rst
reproduce_cerebellum/seed19/: final_model.pt
scripts_151673_NN/: indiv_sbatch.sh  master_sbatch.sh  run_opt.py
scripts_cerebellum/: indiv_sbatch.sh  master_sbatch.sh  run_opt.py
scripts_olfactory/: indiv_sbatch.sh  master_sbatch.sh  run_opt.py
src/GASTON.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/SpatialNN.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gaston/: __main__.py  binning_and_plotting.py  cluster_plotting.py  dp_related.py  filter_genes.py  isodepth_scaling.py  model_selection.py  neural_net.py  parse_adata.py  plot_cell_types.py  process_NN_output.py  restrict_spots.py  run_commandline_scripts.py  run_slurm_scripts.py  segmented_fit.py
src/gaston.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spatialnn/: __main__.py  binning_and_plotting.py  cluster_plotting.py  dp_related.py  neural_net.py  parse_args.py  plot_cell_types.py  segmented_fit.py
test/: run.sh
tutorial_outputs/seed0/: job_0.sh  model_epoch_4000.pt  model_epoch_7000.pt  model_epoch_8000.pt  model_epoch_9500.pt
tutorial_outputs/seed1/: job_1.sh  loss_list.txt  model_epoch_1000.pt  model_epoch_3500.pt  model_epoch_4500.pt  model_epoch_9500.pt
tutorial_outputs/seed10/: final_model.pt  loss_list.txt  min_loss.txt  model_epoch_1000.pt  model_epoch_3500.pt  model_epoch_4500.pt  model_epoch_500.pt  model_epoch_5000.pt  model_epoch_6000.pt  model_epoch_6500.pt  model_epoch_7000.pt  model_epoch_7500.pt  (+2 more)
(+9338 files in other folders)
